fix: remove vertical scrollbars on some page; chore: change the hamburger icon

--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,11 @@ body {
     -moz-appearance: textfield;
     appearance: textfield;
   }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+  }
 }
